# synthetic-search-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.webui.yaml  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py  mcp_server.py
