[project]
name = "open-webui-search-proxy"
version = "1.0.0"
description = "Adapter between Open WebUI external web search and the Synthetic search API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
]

[tool.uv]
package = false
